--- a/index.html
+++ b/index.html
@@ -185,9 +185,9 @@
         </div>
         <div class="advice__text">
          <div class="advice__number-wrapper">
-          <p class="advice__number">
+          <div class="advice__number">
             01
-          </p>
+          </div>
          </div>
           <h3 class="text__title">
             be active
@@ -214,9 +214,9 @@
         </div>
         <div class="advice__text">
          <div class="advice__number-wrapper">
-            <p class="advice__number">
+            <div class="advice__number">
               02
-            </p>
+            </div>
           </div>
           <h3 class="text__title">
             find contact
@@ -241,9 +241,9 @@
       </div>
       <div class="advice__text">
        <div class="advice__number-wrapper">
-          <p class="advice__number">
+          <div class="advice__number">
             03
-          </p>
+          </div>
         </div>
         <h3 class="text__title">
           work it
